--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 .App {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  font-family: Helvetica, sans-serif;
+  word-spacing: 10px;
+  background-color: #f79665;
+}
+
+.main-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 100px;
 }
