--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -3,7 +3,11 @@ button {
   border: none;
   background-color: #49bcd9;
   font-weight: 600;
-  font-size: 35px;
+  font-size: 30px;
 
-  padding: 3px;
+  padding: 5px;
+}
+
+button:active {
+  background-color: #3e94a9;
 }
