Анимация появления текста

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   font-family: Helvetica, sans-serif;
   word-spacing: 10px;
   background-color: #f79665;
+  border-top: solid 5px #49bcd9;
 }
-
 .main-wrapper {
   display: flex;
   align-items: center;
