--- a/src/Components/Quote/Quote.css
+++ b/src/Components/Quote/Quote.css
@@ -1,8 +1,34 @@
+.wrap {
+  max-width: 85%;
+}
+
 .quote-wrapper {
-  width: 50%;
-  min-height: 200px;
+  width: 100%;
+  min-height: 100px;
   font-weight: 600;
   font-size: 35px;
   padding-bottom: 10px;
   text-align: center;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
+}
+
+.quote-wrapper-enter {
+  opacity: 0;
+  transform: scale(0.9) translateX(-100px);
+}
+.quote-wrapper-enter-active {
+  opacity: 1;
+  transform: scale(1.5) translateX(0px);
+  transition: opacity, transform;
+}
+.quote-wrapper-exit {
+  opacity: 1;
+  transform: scale(0.9) translateX(0px);
+}
+
+.quote-wrapper-exit-active {
+  opacity: 0;
+  transform: scale(0.9) translateX(100px);
+  transition: opacity, transform;
 }
