--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   justify-content: center;
   font-family: Helvetica, sans-serif;
   word-spacing: 10px;
-  background-color: #f79665;
+  background-color: #f78c58;
 }
 .main-wrapper {
   display: flex;
