--- a/src/Components/Picture/Picture.css
+++ b/src/Components/Picture/Picture.css
@@ -2,9 +2,87 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
   padding-right: 15px;
+  position: relative;
 }
+
+.spinner {
+  position: absolute;
+  top: 75px;
+  left: 95px;
+  color: rgba(255, 255, 255, 0.846);
+  font-size: 45px;
+}
+
+.spinOn {
+  animation: spin 1s ease infinite;
+}
+
+.spinStop {
+  animation: spin 0.5s ease forwards;
+}
+
+.spinOff {
+  animation: spinOff 0.5s ease forwards;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spinOff {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  85% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
+
+/* .spinner-appear {
+  animation: spin 1s ease infinite;
+}
+
+.spinner-done-appear {
+  animation: spin 1s ease infinite;
+}
+
+.spinner-active-enter {
+  animation: spin 1s ease forwards;
+}
+
+.spinner-done-enter {
+  animation: spin 1s ease infinite;
+}
+
+.spinner-my-exit {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.spinner-my-active-exit {
+  transform: translateY(-50px);
+  opacity: 0;
+}
+
+.spinner-done-exit {
+
+} */
 
 .picture img {
   width: 200px;
