--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -4,10 +4,15 @@ button {
   background-color: #49bcd9;
   font-weight: 600;
   font-size: 30px;
-
   padding: 5px;
+  margin-top: 30px;
+  cursor: pointer;
 }
 
 button:active {
   background-color: #3e94a9;
+}
+
+button:hover {
+  background-color: #44adc7;
 }
