--- a/src/Components/Quote/Quote.css
+++ b/src/Components/Quote/Quote.css
@@ -3,6 +3,30 @@
   min-width: 350px;
 }
 
+.quote-wrapper-enter {
+  opacity: 1;
+  transform: scale(0.9) translateX(-500px);
+}
+.quote-wrapper-enter-active {
+  opacity: 1;
+  transform: scale(1.5) translateX(0px);
+  transition: opacity 500ms, transform 200ms;
+}
+.quote-wrapper-exit {
+  opacity: 1;
+  transform: scale(0.9) translateX(-100px);
+  transition: opacity 500ms, transform 200ms;
+}
+
+.quote-wrapper-exit-active {
+  opacity: 1;
+  transform: scale(1) translateX(0px);
+  transition: opacity 500ms, transform 200ms;
+}
+
+.quote-wrapper-exit-done {
+}
+
 .quote-wrapper {
   width: 100%;
   min-height: 60px;
@@ -11,26 +35,41 @@
   padding-bottom: 10px;
   padding-top: 10px;
   text-align: center;
-  transition: opacity 0.3s ease-in-out;
-  opacity: 1;
+  /* transition: opacity 0.3s ease-in-out; */
 }
 
-.quote-wrapper-enter {
-  opacity: 0;
-  transform: scale(0.9) translateX(-100px);
-}
-.quote-wrapper-enter-active {
-  opacity: 1;
-  transform: scale(1.5) translateX(0px);
-  transition: opacity, transform;
-}
-.quote-wrapper-exit {
-  opacity: 1;
-  transform: scale(0.9) translateX(0px);
+@media (max-width: 958px) {
+  .quote-wrapper {
+    width: 100%;
+    min-height: 60px;
+    font-weight: 600;
+    font-size: 30px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+  }
 }
 
-.quote-wrapper-exit-active {
-  opacity: 0;
-  transform: scale(0.9) translateX(100px);
-  transition: opacity, transform;
+/* @media (max-width: 750px) {
+  .quote-wrapper {
+    width: 100%;
+    min-height: 40px;
+    font-weight: 600;
+    font-size: 22px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+  }
+} */
+
+@media (max-width: 600px) {
+  .quote-wrapper {
+    width: 100%;
+    min-height: 40px;
+    font-weight: 600;
+    font-size: 22px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+  }
 }
